issue #588 Undifined tool tip of add tab button Unnecessary bottom border shows up when moving gadget to another tab in multiple lines of tab Style collapse of sun icon on RSS reader gadget header when minimizing Fix degradation: Style collapse of right header in maximized view on non RSS reader gadgets like minibrowser. Color not change when mouseovering on commandbar menu (IE8) Fix layout and style of maximized RSS reader

--- a/src/main/web/skin/rssreader.css
+++ b/src/main/web/skin/rssreader.css
@@ -133,6 +133,9 @@
 .infoScoop .RssReader .latestMark{
 	display: block;
 }
+.infoScoop .widgetHeader .latestMarkTd img{
+	vertical-align: sub;
+}
 
 .infoScoop .RssReader .RssReader_filter{
 	position:absolute;
